# gl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.cache/clangd/index/: main.cpp.6C84AA4920A5DED5.idx
src/: main.cpp  triangle.cpp  triangle_shader.H
